--- a/quemsomos.css
+++ b/quemsomos.css
@@ -2,7 +2,10 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
 }
+
+
 
 nav {
     background: linear-gradient( to right,#fff8b1 , #ffd700);
@@ -55,17 +58,35 @@ nav {
         
 }
 
-.quemSomos {
+.container-quemSomos {
     display: flex;
-    align-items: center;
     justify-content: center;
-    padding: 1rem;
+    gap: 4rem;
 }
 
 .perfil {
-    height: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
 }
 
+.container-quemSomos img {
+    margin-top: 1rem;
+    max-width: 100%;
+    height: 100px;
+    display: block;
+}
+
+.container-quemSomos p {
+    margin-top: .5rem;
+    font-size: 1.2rem;
+    font-weight: bold;
+}
+
+#logo-rede-sociais {
+   height: 30px;
+}
 
 
 .missaoVisaoValores {
