--- a/sejavoluntario.css
+++ b/sejavoluntario.css
@@ -136,10 +136,39 @@ nav ul a  {
 }
 .imagem-whatsapp{
 
-  margin-left: 85px;
-  margin-top: 55px;
- 
+  margin-left:50px;
+  margin-top:15px;
+  justify-content:flex-start;
   
+}
+#contato-whatsapp{
+  
+  display: flex;
+  text-decoration: none;
+  font-size:18px;
+  margin-left:35px;
+  margin-top:35px;
+   
+}
+.contato-conosco{
+  
+  
+  text-align: left;
+  height: 10px;
+  margin-left:30px;
+  margin-top:20px;
+  padding-right:55%;
+  justify-content:flex-start;
+  color: black;
+}
+
+#ajuda {
+  position:relative;
+  margin-bottom:0px;
+  padding: 0;
+  margin-top: auto;
+
+
 }
 
 #ajuda {
@@ -152,10 +181,9 @@ nav ul a  {
 }
 
 
-/* cris aqui alterei porque eu removi o fundo da imagem. */
 .img-pessoas-ajuda {
     position: absolute;
-    top:55%; 
+    top:53%; 
     right:0;
     transform: translateY(-50%);
     z-index: 1;
